<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="button_true">Verdadero</string>
    <string name="button_false">Falso</string>
    <string name="button_swipe">◄ Desliza para pasar la pregunta</string>
    <string name="button_ranking">RANKING</string>
    <string name="correct_toast">CORRECTO</string>
    <string name="incorrect_tost">INCORRECTO</string>
    <string name="pregunta1">El océano pacífico es más grande que el océano Atlántico</string>
    <string name="pregunta2">El canal de Suez conecta el mar rojo con el océano Índico</string>
    <string name="pregunta3">El río Amazona es el río más largo del continente americano</string>
    <string name="pregunta4">El río Tajo es el más largo de la península Ibérica</string>
    <string name="pregunta5">China es el país más grande del mundo</string>
    <string name="pregunta6">El vaticano es el país más pequeño del mundo</string>
    <string name="pregunta7">El Teide es el monte más alto de la península ibérica</string>
    <string name="string_puntos">Puntos: </string>
    <string name="string_FIN">FIN: Ya no hay más preguntas</string>
    <string name="button_restart">REINICIAR</string>
    <string name="warning_text">¿Estás seguro que quieres hacer eso?</string>
    <string name="show_answer_button">Respuesta</string>
    <string name="cheat_button">Trampa!</string>
    <string name="judgment_toast">Tramposo</string>
    <string name="finalPuntos">Puntuación final: </string>
</resources>