<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textPuntos"
            android:layout_width="match_parent"
            android:layout_height="116dp"
            android:text="@string/string_puntos"
            android:textAlignment="center"
            android:textSize="16sp"
            tools:text="@string/string_puntos" />

        <Button
            android:id="@+id/cheat_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/cheat_button"
            android:textColor="#263238"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textPreguntas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="roboto"
            android:padding="24dp"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/true_button"
                style="Widget.Material.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:backgroundTint="#4CAF50"
                android:text="@string/button_true"
                android:textColor="#263238" />

            <Button
                android:id="@+id/false_button"
                style="Widget.Material.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:backgroundTint="#4CAF50"
                android:text="@string/button_false"
                android:textColor="#263238" />

        </LinearLayout>

        <Button
            android:id="@+id/button_Swipe"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="#00FFFFFF"
            android:text="@string/button_swipe"
            android:textAlignment="center"
            android:textColor="@android:color/tab_indicator_text"
            app:iconTint="#00FFFFFF"
            app:rippleColor="#00FFFFFF" />

    </LinearLayout>

</RelativeLayout>